<resources>
    <string name="app_name">Intents</string>
    <string name="email">Email</string>
    <string name="email_format">example@gmail.com</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="username">UserName</string>
    <string name="login">Login</string>
    <string name="gender">gender</string>
    <string name="dial">dial</string>
    <string name="send_email">Send Email</string>
</resources>